Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -880,7 +880,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1 Terajoule entspricht dabei 277'777,777 KWh. Zur besseren Einordnung kann die grösse der Energieeinheit mit folgendem Durchschnittswert dargestellt werden. Ein durchschnitts Haushalt mit 4 Personen in der Schweiz braucht ca. 4'500 KWh pro Jahr (https://www.energieheld.ch/renovation/nachhaltig-leben/energieverbrauch). Demzufolge deckt 1 TJ den Bedarf von rund 62 durchschnittlichen Haushalten."
+        "1 Terajoule entspricht dabei 277'777,777 KWh. Zur besseren Einordnung kann die grösse der Energieeinheit mit folgendem Durchschnittswert dargestellt werden. Ein durchschnitts Haushalt mit 4 Personen in der Schweiz braucht ca. 15'500 KWh pro Jahr für die Heizung, Betrieb aller elektrischen Geräte und Warmwasser (https://www.energieheld.ch/renovation/nachhaltig-leben/energieverbrauch). Demzufolge deckt 1 TJ den Bedarf von rund 18 durchschnittlichen Haushalten."
       ],
       "metadata": {
         "id": "JhVko-8gA9mD"
@@ -1488,7 +1488,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Erkenntnisse\n",
+        "#### Analyse\n",
         "\n",
         "Eine Analyse der Daten zeigt, dass im Jahr 1980 die Haushalte den höchsten Verbrauch an fossilen Energieträgern aufwiesen. Im weiteren Verlauf nimmt der Verkehr den Lead und behält diese Position bis zum Ende bei. Der Verbrauch der Haushalte verharrt auf dem zweiten Rang. Auch die Verbräuche in der Landwirtschaft und der statistischen Differenz belegen mit konstantem Wert den fünften Platz. Die Positionen der Industrie und der Dienstleistungen wechseln in wiederkehrender Weise und sind in der Regel sehr nah beieinander.\n"
       ],
@@ -2309,85 +2309,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Erkenntnisse\n",
+        "#### Analyse\n",
         "\n",
-        "Eine"
+        "**Panel: \"Absolute Werte\":**\n",
+        "\n",
+        "Die sektorale Betrachtung zeigt, dass der Verkehr über die Jahre hinweg zum mit Abstand grössten Verbraucher fossiler Energien geworden ist. Während der Verbrauch in der Industrie, Dienstleistungen und bei den Haushalten seit mehreren Jahrzehnten rückläufig oder zumindest stabil ist, weist der Verkehrssektor eine steigende Tendenz auf.\n",
+        "\n",
+        "**Panel: \"Prozentuale Anteile\":**\n",
+        "\n",
+        "Die Anteile der Industrie (von ca. 16% auf 10%), Dienstleistungen (von ca. 16% auf 10%) und der Haushalte (von ca. 30% auf ca. 20%) am fossilen Gesamtverbrauch sind stetig gesunken. Während der Verkehr mittlerweile fast 60% des fossilen Energieverbrauchs ausmacht. Dies unterstreicht die strukturelle Verschiebung und verweist auf die zunehmende Dominanz des Verkehrs als Emissionsquelle.\n",
+        "\n",
+        "**Panel: \"Einwohnerzahlen\":**\n",
+        "\n",
+        "Die Einwohnerzahl der Schweiz ist in den vergangenen Jahrzehnten kontinuierlich gestiegen. In 1980 lebten 6.3 Millionen Menschen und im Jahr 2023 lebten bis zu 9 Millionen Menschen in der Schweiz. Ein Anstieg der Bevölkerung führt automatisch zu einem höheren Gesamtenergiebedarf, da mehr Menschen Wohnraum, Mobilität und Konsumgüter benötigen. Selbst bei gleichbleibendem Pro-Kopf-Verbrauch steigt dadurch der absolute Energievbedarf.\n",
+        "\n",
+        "**Panel: \"Pro-Kopf-Verbrauch (nach Sektor)\":**\n",
+        "\n",
+        "Zwischen 1980 und 2000 stieg der Pro-Kopf-Verbrauch fossiler Energieträger im Verkehrssektor kontinuierlich an, bedingt durch zunehmende Motorisierung, wachsende Mobilitätsansprüche und das Wirtschaftswachstum. Ab 2001 bis 2008 stagnierte dieser Verbrauch, was auf erste Effizienzgewinne und die beginnende Verbreitung sparsamerer Fahrzeuge zurückzuführen ist. In der Phase von 2008 bis 2019 war ein Rückgang erkennbar, der auf technologische Verbesserungen, politische Massnahmen sowie eine Verlagerung hin zu ökologischeren Verkehrsmitteln zurückzuführen sein dürfte. Im Jahr 2020 verursachte die Corona-Pandemie einen markanten Einbruch des Verkehrsaufkommens und damit des Energieverbrauchs. Seitdem, insbesondere zwischen 2020 und 2023, ist der Verbrauch wieder angestiegen, was auf die Rückkehr zur Normalität hindeutet.\n",
+        "In den Sektoren Haushalte, Industrie und Dienstleistungen ist der Pro-Kopf-Verbrauch über die Jahre deutlich gesunken. Dies lässt sich vor allem auf verbesserte Energieeffizienz, den vermehrten Einsatz erneuerbarer Energien sowie technische Modernisierungen zurückführen. Auch gesetzliche Vorgaben und Förderprogramme bei Immobilien-Renovationen, Solartechnik und neu beschaffte Autos.\n",
+        "\n",
+        "**Panel: \"Pro-Kopf-Verbrauch (gesamt)\":**\n",
+        "\n",
+        "Der Gesamtverbrauch fossiler Energien pro Kopf hatte im Jahr 1991 den Höhepunkt bei einem Verbrauch von 89.5 GJ/Kopf. Im Jahr 2020 und 2023 betrug der Verbrauch noch 51.3 GJ/Kopf bzw. 50.7 GJ/Kopf. Mit diesen Zahlen wird erst richtig ersichtlich, dass die Schweiz in den letzten drei Jahrzehnten erhebliche Fortschritte bei der Reduktion des fossilen Energieverbrauchs pro Kopf erzielt hat. Die jüngste Entwicklung, ein leichter Anstieg des Pro-Kopf-Verbrauchs im Jahr 2021 nach dem pandemiebedingten Tief, zeigt jedoch, dass dieser Fortschritt nicht als selbstverständlich betrachtet werden darf. Somit sind weiterhin gezielte energiepolitische Massnahmen erforderlich, um eine nachhaltige Trendumkehr langfristig zu sichern.\n",
+        "\n",
+        "**Hinweis:**\n",
+        "\n",
+        "Bei den Sektoren Industrie und Dienstleistungen haben wir die Unterscheidung der Anzahl Angestellten je Sektor nicht direkt in die Auswertung einfliessen lassen. Dies würde den Rahmen dieser Arbeit sprengen. Es gilt aber zu beachten, dass im Jahr 2023 über 77% der Erwärbstätigen im Dienstleistungssektor und rund 20% der Erwerbstätigen in der Schweiz im Industriesektor tätig waren (https://de.statista.com/statistik/daten/studie/216757/umfrage/erwerbstaetige-nach-wirtschaftssektoren-in-der-schweiz/#:~:text=Im%20Jahr%202023%20waren%20in%20der%20Schweiz%20durchschnittlich,in%20der%20Industrie%20und%2077,5%20Prozent%20im%20Dienstleistungssektor).\n",
+        "\n",
+        "#### Handlungsempfehlungen: Fokussierung auf realistische und wirksame Massnahmen\n",
+        "Es liegt nahe, dass nicht alle theoretisch denkbaren Massnahmen gleich sinnvoll oder politisch realisierbar sind. Daher empfiehlt sich eine Fokussierung auf drei besonders wirksame und gleichzeitig praktikable Handlungsfelder:\n",
+        "\n",
+        "**Dekarbonisierung des Verkehrssektors:**\n",
+        "\n",
+        "Der grösste Handlungsbedarf liegt im Verkehr. Kurzfristig wirkungsvolle Massnahmen umfassen den beschleunigten Ausbau der Ladeinfrastruktur für Elektrofahrzeuge, steuerliche Anreize für E-Mobilität sowie die Attraktivitätssteigerung des öffentlichen Verkehrs. Auch eine intelligent ausgestaltete CO₂-Bepreisung im Treibstoffbereich könnte, bei sozialer Rückverteilung, mittelfristig Wirkung entfalten.\n",
+        "\n",
+        "**Förderung des Heizungsersatzes im Gebäudebereich:**\n",
+        "\n",
+        "Die Umstellung auf klimafreundliche Heizsysteme (z.B. Wärmepumpen, Fernwärme) sollte durch gezielte Förderprogramme weiter vorangetrieben werden. Ergänzend ist zu prüfen, ob Sanierungspflichten bei Eigentümerwechseln rechtlich und politisch umsetzbar sind. Dies würde die Marktdurchdringung effizienter Technologien deutlich erhöhen.\n",
+        "\n",
+        "**Unterstützung der Industrie bei der Umstellung auf CO₂-arme Prozesse:**\n",
+        "\n",
+        "Die Industrie benötigt spezifische Förderinstrumente für die Dekarbonisierung ihrer Prozessenergie, insbesondere für grosse Energieverbraucher. Förderprogramme für Technologien wie Abwärmenutzung oder Wasserstoff sowie branchenspezifische CO₂-Reduktionsziele sind hier zentrale Hebel.\n",
+        "\n",
+        "Flankierend sollten die datenbasierte Steuerung durch verbesserte Energieverbrauchsstatistiken sowie zielgruppenspezifische Informationskampagnen intensiviert werden. Diese Massnahmen sind zwar nicht direkt emissionsreduzierend, erhöhen jedoch die Wirksamkeit der vorgenannten Hebel erheblich.\n",
+        "\n",
+        "#### Fazit:\n",
+        "Der Verkehr hat sich als klar dominierender Verbraucher fossiler Energien etabliert und verursacht heute rund 60% des Gesamtverbrauchs, während andere Sektoren rückläufige oder stabile Tendenzen zeigen. Trotz steigendem Bevölkerungswachstum konnte der Pro-Kopf-Verbrauch seit 1991 deutlich gesenkt werden. Ein Erfolg energiepolitischer Massnahmen. Dennoch ist der jüngste Wiederanstieg nach der Pandemie ein Warnsignal. Die Dekarbonisierung des Verkehrs bleibt der zentrale Hebel für weitere Fortschritte, ergänzt durch gezielte Fördermassnahmen im Gebäude- und Industriesektor. Um die Wirkung zu maximieren, ist eine datengestützte Steuerung mit begleitender Kommunikation unerlässlich."
       ],
       "metadata": {
         "id": "_1qqkboeQhH0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Analyse\n",
-        "Es lassen sich mehrere Erkenntnisse zu den Veränderungen der Verbrauchsmuster fossiler Energieträger in der Schweiz ziehen. Ich gliedere die Analyse nach den enthaltenen Kapiteln bzw. Diagrammen:\n",
-        "\n",
-        "#### Form\n",
-        "\n",
-        "1. Jährlicher fossiler Bruttoverbrauch nach Sektor\n",
-        "\n",
-        "Erkenntnisse:\n",
-        "\n",
-        "- Der Bruttoverbrauch fossiler Energien variiert über die Jahre deutlich.\n",
-        "- Besonders auffällig ist ein Rückgang in bestimmten Sektoren (z. B. Industrie), während andere (z. B. Verkehr) über lange Zeit stabil bleiben oder weniger stark abnehmen.\n",
-        "- Krisen oder politische Entscheidungen könnten Rückgänge erklären (z. B. Ölkrisen, CO₂-Gesetzgebung, technologische Effizienzsteigerungen).\n",
-        "Form\n",
-        "\n",
-        "2. Prozentuale Verteilung des Endverbrauchs nach Sektor (%)\n",
-        "\n",
-        "Erkenntnisse:\n",
-        "\n",
-        "- Der Anteil des Verkehrs am fossilen Endverbrauch steigt über die Jahre und wird zur dominanten Kategorie.\n",
-        "- Die Industrie verliert prozentual an Bedeutung, was auf Strukturwandel und Effizienzgewinne hindeutet.\n",
-        "- Haushalte zeigen ebenfalls einen sinkenden Anteil, möglicherweise durch bessere Gebäudeisolierung und Heizsysteme.\n",
-        "Form\n",
-        "\n",
-        "3. Einwohnerzahl der Schweiz über die Jahre\n",
-        "\n",
-        "Erkenntnisse:\n",
-        "\n",
-        "- Die Bevölkerung nimmt kontinuierlich zu, was einen steigenden Energiebedarf implizieren könnte.\n",
-        "- Dennoch sinkt der fossile Pro-Kopf-Verbrauch (siehe nächste Kapitel), was auf Effizienzgewinne und Energiemix-Änderungen hindeutet.\n",
-        "Form\n",
-        "\n",
-        "4. Fossiler Endenergieverbrauch pro Kopf nach Sektor\n",
-        "\n",
-        "Erkenntnisse:\n",
-        "\n",
-        "- Der Pro-Kopf-Verbrauch in der Industrie sinkt über die Jahre – Hinweis auf Effizienzsteigerung oder Verlagerung energieintensiver Produktion.\n",
-        "- Der Verkehr bleibt über weite Strecken konstant oder sinkt nur leicht, was auf begrenzte Alternativen zu fossilen Treibstoffen hinweist.\n",
-        "- Haushalte zeigen einen klaren Rückgang, vermutlich durch energetische Sanierungen und technologische Verbesserungen.\n",
-        "Form\n",
-        "\n",
-        "5. Gesamter fossiler Endenergieverbrauch pro Kopf\n",
-        "\n",
-        "Erkenntnisse:\n",
-        "\n",
-        "- Trotz Bevölkerungswachstum sinkt der fossile Endenergieverbrauch pro Kopf deutlich.\n",
-        "- Dies spricht für erfolgreiche Maßnahmen zur Effizienzsteigerung, Substitution durch erneuerbare Energien oder Änderungen im Verhalten der Bevölkerung.\n",
-        "Form\n",
-        "\n",
-        "##### Gesamterkenntnis:\n",
-        "Die Verbrauchsmuster fossiler Energieträger in der Schweiz haben sich in den letzten Jahrzehnten deutlich verändert – weg von einem breiten Einsatz in vielen Sektoren hin zu einer Konzentration im Verkehrsbereich. Gleichzeitig gelingt es, den Gesamtverbrauch pro Kopf zu senken, obwohl die Bevölkerung wächst – ein Hinweis auf eine erfolgreiche Energiewende in Teilen der Gesellschaft und Wirtschaft.\n",
-        "\n",
-        "\n",
-        "\n",
-        "#### Text zur Analyse\n",
-        "Aus dem Dokument lassen sich mehrere wichtige Erkenntnisse über die Veränderungen im Verbrauch fossiler Energieträger in der Schweiz gewinnen.\n",
-        "\n",
-        "Der jährliche fossile Bruttoverbrauch zeigt deutliche Unterschiede zwischen den Sektoren über die Jahre hinweg. Während der Verbrauch in der Industrie und in den Haushalten langfristig abnimmt, bleibt er im Verkehrssektor weitgehend stabil oder geht nur leicht zurück. Dieser Rückgang in Industrie und Haushalten lässt sich vermutlich durch technologische Effizienzsteigerungen, strukturelle Veränderungen in der Wirtschaft sowie durch politische Maßnahmen wie Umweltvorgaben oder Förderprogramme erklären.\n",
-        "\n",
-        "Die prozentuale Verteilung des fossilen Endverbrauchs nach Sektor unterstreicht diesen Trend. Der Anteil des Verkehrssektors nimmt kontinuierlich zu und entwickelt sich zur dominanten Verbrauchskategorie. Im Gegensatz dazu verlieren die Industrie und die Haushalte prozentual an Bedeutung. Dies deutet darauf hin, dass in diesen Bereichen erfolgreich fossile Energieträger durch alternative Lösungen ersetzt oder der Verbrauch insgesamt reduziert wurde.\n",
-        "\n",
-        "Parallel dazu zeigt sich in der Darstellung der Bevölkerungsentwicklung ein kontinuierliches Wachstum der Schweizer Einwohnerzahl. Normalerweise würde man erwarten, dass ein solcher Anstieg auch mit einem erhöhten Energieverbrauch einhergeht. Die weiteren Daten zeigen jedoch, dass dies nicht der Fall ist, im Gegenteil nimmt der pro Kopf-Verbrauch ab.\n",
-        "\n",
-        "Der fossile Endenergieverbrauch pro Kopf ist in fast allen Sektoren rückläufig. In der Industrie sinkt der Pro-Kopf-Verbrauch deutlich, was auf Effizienzgewinne oder eine Verlagerung energieintensiver Prozesse ins Ausland hinweist. In den Haushalten lässt sich ebenfalls ein klarer Rückgang beobachten, der unter anderem durch energetische Sanierungen, moderne Heizsysteme und verbesserte Dämmung zu erklären ist. Im Verkehrsbereich bleibt der Verbrauch pro Kopf vergleichsweise konstant, was darauf hinweist, dass in diesem Bereich bisher weniger Fortschritte bei der Reduktion fossiler Energieträger erzielt wurden.\n",
-        "\n",
-        "Abschließend zeigt der gesamte fossile Endenergieverbrauch pro Kopf einen deutlichen Rückgang über die Jahre. Trotz wachsender Bevölkerung gelingt es also, den Verbrauch fossiler Energien pro Person zu senken. Dies ist ein positives Zeichen für die Wirkung energiepolitischer Maßnahmen, technologische Entwicklungen sowie ein möglicherweise gewandeltes Konsumverhalten der Bevölkerung. Die Schweiz befindet sich demnach auf einem Pfad zunehmender Energieeffizienz und partieller Dekarbonisierung, insbesondere außerhalb des Verkehrssektors."
-      ],
-      "metadata": {
-        "id": "dk9PPXuB-J5H"
       }
     },
     {
