Mit Colab erstellt

--- a/Semesterarbeit_BINA_final_(draft).ipynb
+++ b/Semesterarbeit_BINA_final_(draft).ipynb
@@ -139,7 +139,7 @@
       "source": [
         "Im ersten Schritt geht es um die Definition von Zielen und Informationsbedarf. Um die Veränderungen und Anstrengungen, die zur Umsetzung der Energiestrategie 2050 nötig sind, zu unterstützen, haben wir von unserer Abteilungsleitung eine begleitende Aufgabe erhalten:\n",
         "\n",
-        "«Historische und aktuelle Informationen zur Energiewirtschaft der Schweiz einem breiteren Adressatenkreis aus Politik und Wirtschaft verständlich zugänglich und erfahrbar machen.»\n",
+        "«Historische und aktuelle Informationen zur Energiewirtschaft der Schweiz einem breiteren Adressatenkreis aus Politik und Wirtschaft verständlich zugänglich und erfahrbar machen. Dazu ergänzend, sollen Handlungsempfehlungen formuliert werden, welche aufzeigen, welche Massnahmen aufgrund der vorhandenen Daten begründet werden können.»\n",
         "\n",
         "Da es zu den Aufgaben des BFE gehört, die Voraussetzungen und Rahmenbedingungen für eine ausreichende, krisenfeste und nachhaltige Energieversorgung der Schweiz zu schaffen, sind wir auf den Einbezug vieler Akteure und Entscheidungsträger angewiesen. Indem wir ihnen die Daten zur schweizerischen Energiewirtschaft verständlich und interaktiv aufbereiten, ermöglichen wir diesen Akteuren wiederum, ihren eigenen Adressatenkreis mit verständlichen Daten zu versorgen und etwa Erfolge bei der Erhöhung der Energieeffizienz oder der Verringerung von Abhängigkeiten (etwa problematische Energieträger oder mächtige ausländische Akteure) aufzuzeigen. Mittels interessant aufbereiteter Daten die Wirkung von Massnahmen und Ereignissen verfolgen zu können, erhöht die Bereitschaft, diese mitzutragen. Für eine Energiestrategie, deren Umsetzung mehrere Jahrzehnte in Anspruch nimmt und Erfolge teilweise erst mit grosser Verzögerung spürbar werden, eine nicht unwesentliche Voraussetzung."
       ],
@@ -237,11 +237,11 @@
         "!pip install jupyter_bokeh"
       ],
       "metadata": {
-        "id": "NuGLExRNMUng",
-        "outputId": "388e4b0f-f30e-41f8-db7d-06d5e74b10a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NuGLExRNMUng",
+        "outputId": "388e4b0f-f30e-41f8-db7d-06d5e74b10a8"
       },
       "execution_count": 27,
       "outputs": [
@@ -1371,7 +1371,7 @@
         "\n",
         "Auch beim Erdgas zeigt sich eine differenzierte Entwicklung. Obwohl der Verbrauch über einen längeren Zeitraum relativ stabil blieb, zeigen die Daten seit etwa 2010 eine zunehmende Volatilität. Der signifikante Rückgang ab dem Jahr 2022 ist insbesondere vor dem Hintergrund der geopolitischen Instabilität in Europa – insbesondere dem Krieg in der Ukraine und der daraus resultierenden Energiekrise – zu interpretieren. Infolge dieser Unsicherheiten wurde die strategische Verwundbarkeit der Schweiz in Bezug auf Gasimporte evident. Als Reaktion auf diese Entwicklung begannen Industrie und Haushalte verstärkt, Gas durch andere Energieformen zu substituieren. Dies dürfte mittelfristig zu einer weiteren Reduktion des Gasverbrauchs führen. Es ist von essentieller Bedeutung, dass die Analyse der vorliegenden Daten mit äusserster Sorgfalt erfolgt.\n",
         "\n",
-        "Demgegenüber weist Elektrizität ein deutlich schwankenderes Verbrauchsprofil auf, das in hohem Masse von saisonalen Einflüssen, der inländischen Produktionskapazität (insbesondere Wasserkraft) und dem Importbedarf abhängt. Elektrischer Strom nimmt eine zunehmend zentrale Rolle in der Dekarbonisierungsstrategie der Schweiz ein. Dies manifestiert sich einerseits im Ersatz fossiler Energieträger in der Mobilität und andererseits im verstärkten Einsatz von Wärmepumpen im Gebäudebereich. Diese Entwicklung ist jedoch mit Herausforderungen verbunden. Die sogenannte Winterstromlücke, die durch die unzureichende einheimische Produktion in den Wintermonaten entsteht, führt zu temporären Importen. Diese sind wiederum mit Versorgungsrisiken und Preisschwankungen verbunden, was die Notwendigkeit eines Ausbaus von Speicherlösungen und eines diversifizierten Energieportfolios unterstreicht.\n",
+        "Demgegenüber weist Elektrizität ein deutlich schwankenderes Verbrauchsprofil auf, das in hohem Masse von saisonalen Einflüssen, der inländischen Produktionskapazität (insbesondere Wasserkraft) und dem Importbedarf abhängt. Elektrischer Strom nimmt eine zunehmend zentrale Rolle in der Dekarbonisierungsstrategie der Schweiz ein. Dies manifestiert sich einerseits im Ersatz fossiler Energieträger in der Mobilität und andererseits im verstärkten Einsatz von Wärmepumpen im Gebäudebereich. Diese Entwicklung ist jedoch mit Herausforderungen verbunden. [[[**Die sogenannte Winterstromlücke, die durch die unzureichende einheimische Produktion in den Wintermonaten entsteht, führt zu temporären Importen. Diese sind wiederum mit Versorgungsrisiken und Preisschwankungen verbunden, was die Notwendigkeit eines Ausbaus von Speicherlösungen und eines diversifizierten Energieportfolios unterstreicht.** WIRD BEI DEN URSACHEN BESSER BESCHRIEBEN]]]\n",
         "\n",
         "Schliesslich lässt sich bei den Kohleprodukten ein nahezu vollständiger Bedeutungsverlust beobachten. Seit den 1990er Jahren ist ein kontinuierlicher Rückgang des Verbrauchs zu verzeichnen, sodass sie heute im schweizerischen Energiesystem eine marginale Rolle spielen. Dieser Rückgang ist Ausdruck eines erfolgreichen Strukturwandels, der durch politische Rahmenbedingungen, ökologische Zielsetzungen und die mangelnde wirtschaftliche Attraktivität des kohlebasierten Energieverbrauchs bedingt ist.\n",
         "\n",
